# blockcg

./: .clang-format  .gitignore  CMakeLists.txt  README.md  per_iteration_cost.cpp  test.txt
include/: defines.h  matrix_market.h  solvers.h  sparse_csr.h
scripts/: bench_mtx_all.sh  download_mtx.sh
src/: main.cpp  main.cu  matrix_market.cpp  solver.cpp  solvers.cpp  sparse_csr.cpp
